1. Set initial count for time as 0  2. Set an id for start button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a id="highScore"" href="">View High Score </a>
       <div class="timestyle">
         Time: 
-        <span id="time"></span>
+        <span id="time">0</span>
       </div>
     </header>
 
@@ -27,7 +27,7 @@
         Keep in mind that incorrect answers will penalize your scoreTime by 10
         seconds!
       </p>
-      <button type="button">START</button>
+      <button id="startbutton" type="button">START</button>
     </main>
 
     <footer>
