1. Displaying 1 question with multiple choice answers on clicking start button  2. Applied background image

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </header>
     <center>
       <main class="main">
-        <div id="question-container" class="hide controls">
+        <div id="question-container" class="hide">
           <div id="question">Question</div>
-          <div id="answerbuttons" class="buttongrid">
-            <button class="button">1. Answer</button>
-            <button class="button">2. Answer</button>
-            <button class="button">3. Answer</button>
-            <button class="button">4. Answer</button>
+          <div id="answerbuttons">
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
           </div>
         </div>
         <div id="welcome-container">
@@ -37,7 +37,7 @@
             Keep in mind that incorrect answers will penalize your scoreTime by
             10 seconds!
           </p>
-          <button id="startbutton" class="startbutton button">START</button>
+          <button id="startbutton">START</button>
         </div>
       </main>
     </center>
