Created a message container for displaying message if selected answer is correct or not.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
           </p>
           <button id="startbutton">START</button>
         </div>
+        <div id="message-container" class="hide">Message</div>
       </main>
     </center>
 
-    <footer>
-      <p>© Parul Raj | Designed for UW's Coding Bootcamp</p>
-    </footer>
+    <footer>© Parul Raj | Designed for UW's Coding Bootcamp</footer>
 
     <script defer src="./assets/js/script.js"></script>
   </body>
