1.Linked View High Score to score.html page. 2.Adding initials input and button for submitting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <a id="highScore" href="">View High Score </a>
+      <a id="highScore" href="./assets/HTML/score.html" >View High Score </a>
       <div class="timestyle">
         Time:
         <span id="time">0</span>
@@ -40,6 +40,10 @@
           <button id="startbutton">START</button>
         </div>
         <div id="message-container" class="hide">Message</div>
+        <div id="initials-form" class="hide">
+          Enter your initials: <input type="text" name="initials" id="initials" />
+          <button id="submitbtn">SUBMIT</button>
+        </div>
       </main>
     </center>
 
