Created ordered list for showing initials and high score

--- a/assets/HTML/score.html
+++ b/assets/HTML/score.html
@@ -11,9 +11,10 @@
     <center>
     <main id ="main">
         <h1>High Scores</h1>
-    <button id="gobackBtn">GO BACK</button>
-    <button id="clearscoreBtn">CLEAR HIGH SCORE</button>
-</main>
+        <ol id="highscore-list"></ol>
+        <button id="gobackBtn">GO BACK</button>
+        <button id="clearscoreBtn">CLEAR HIGH SCORE</button>
+    </main>
 </center>
 <footer>© Parul Raj | Designed for UW's Coding Bootcamp</footer>
     <script defer src="../js/score.js"></script>
