Added Comments and Formatted documents

--- a/assets/HTML/score.html
+++ b/assets/HTML/score.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>High Score</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="icon" type="image/x-icon" href="../images/favicon.jpeg" />
-</head>
-<body>
+  </head>
+  <body>
     <!-- MAIN SECTION -->
     <center>
-    <main id ="main">
+      <main id="main">
         <h1>High Scores</h1>
         <!-- Order list for scores and initials of different users -->
         <ol id="highscore-list"></ol>
         <!-- Goback Button and Clear score button -->
         <button id="gobackBtn">GO BACK</button>
         <button id="clearscoreBtn">CLEAR HIGH SCORE</button>
-    </main>
-</center>
-<!-- FOOTER -->
-<footer>© Parul Raj | Designed for UW's Coding Bootcamp</footer>
+      </main>
+    </center>
+    <!-- FOOTER -->
+    <footer>© Parul Raj | Designed for UW's Coding Bootcamp</footer>
     <script defer src="../js/score.js"></script>
-</body>
+  </body>
 </html>
