--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <button class="button"></button>
           </div>
         </div>
+        <!-- Welcome message with start button -->
         <div id="welcome-container">
           <h1>Coding Quiz Challenge</h1>
           <p>
